# reflow2

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COORD.md  Cargo.toml  NOTICE  README.md
.claude/: handoff_nudge.py  settings.json
.claude/skills/check-health/: SKILL.md
.claude/skills/genesis/: SKILL.md
.claude/skills/impact-check/: SKILL.md
.claude/skills/link-artifacts/: SKILL.md
.claude/skills/report-friction/: SKILL.md
.claude/skills/retire-from-design/: SKILL.md
.claude/skills/revise-design/: SKILL.md
.claude/skills/where-am-i/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.grok/skills/adopt/: SKILL.md
.grok/skills/capture-intent/: SKILL.md
.grok/skills/detect-and-ask/: SKILL.md
.grok/skills/impact-check/: SKILL.md
.grok/skills/link-artifacts/: SKILL.md
consumer-template/: AGENTS.md  README.md  SETUP.md
consumer-template/.grok/skills/capture-intent/: SKILL.md
consumer-template/.grok/skills/detect-and-ask/: SKILL.md
consumer-template/.grok/skills/impact-check/: SKILL.md
consumer-template/.grok/skills/link-artifacts/: SKILL.md
crates/reflow2-core/: AGENTS.md  Cargo.toml
crates/reflow2-core/src/: agent.rs  allocate.rs  alternatives.rs  artifact.rs  budget.rs  compare.rs  confirm.rs  detect.rs  dimensions.rs  drift.rs  export.rs  fielded.rs  flow.rs  genesis.rs  graph.rs  heal.rs  hierarchy.rs  ingest.rs  lib.rs  llm.rs  merge.rs  nodes.rs  operate.rs  propagate.rs  provenance.rs  report.rs  schema.rs  search.rs  structure.rs  surprises.rs  temporal.rs  verify.rs  vocabulary.rs
crates/reflow2-core/tests/: agent.rs  allocate.rs  alternatives.rs  artifact.rs  budget.rs  coherence_loop.rs  compare.rs  component_verified.rs  confirm.rs  cycles.rs  detect.rs  dimensions.rs  drift.rs  export.rs  fielded.rs  flow.rs  gap_review.rs  genesis.rs  golden_thread.rs  heal.rs  hierarchy.rs  ingest.rs  interface.rs  llm.rs  merge.rs  persistence.rs  propagate.rs  provenance.rs  report.rs  search.rs  serialize.rs  structural.rs  surprises.rs  temporal.rs  upsert.rs  verify_drift.rs  write_side.rs
crates/reflow2-mcp/: AGENTS.md  Cargo.toml  README.md
crates/reflow2-mcp/src/: dto.rs  lib.rs  main.rs  service.rs
crates/reflow2-mcp/tests/: tools.rs
docs/: artifact-linking.md  backlog.md  chain-reflow-nuggets.md  extraction-plan.md  gap-surfacing.md  genesis.md  graph-analysis.md  heal-process.md  impact-propagation.md  interaction-surfaces.md  loop-dag.html  loop-model.json  operating-environment.md  org-scale-vision.md  overview.md  partnership.md  reflow-audit.md  reflow-v3-nuggets.md  requirements-coverage.md  sharpening.md  sme-augmentation.md  surface-plan.md  three-axes.md  upgrading-to-v0.2.0.md  upgrading-to-v0.3.0.md  upgrading-to-v0.7.0.md  v0.2.0-what-we-dont-know.md  viewpoints.md  vision.md
docs/design/: reflow2.json  views.html
docs/skills/: README.md  vendor-claude-code.md  vendor-grok-cli.md  vendor-opencode.md  vendor-vscode-copilot.md
docs/trials/: 2026-07-18-blind-trial-weather-station.md  2026-07-18-grok-trial-weather-station.md  2026-07-18-selfhost-genesis.md  2026-07-18-selfhost-probe.md  2026-07-19-coherent-erosion.md  2026-07-19-erosion.md  2026-07-19-phase-coverage.md  2026-07-19-selfhost-functional-design.md  2026-07-20-self-adopt-live.md  2026-07-21-reallocation-edge-history.md  2026-07-23-bl83b-adopt-dogfood.md  README.md
getting-started/: AGENTS.md  README.md  SETUP.md  mcp.json
getting-started/.grok/skills/capture-intent/: SKILL.md
getting-started/.grok/skills/detect-and-ask/: SKILL.md
getting-started/.grok/skills/link-artifacts/: SKILL.md
getting-started/skills/adopt/: SKILL.md
getting-started/skills/capture-intent/: SKILL.md
getting-started/skills/check-health/: SKILL.md
getting-started/skills/ci-gate/: SKILL.md
getting-started/skills/detect-and-ask/: SKILL.md
getting-started/skills/link-artifacts/: SKILL.md
getting-started/skills/report-friction/: SKILL.md
getting-started/skills/retire-from-design/: SKILL.md
getting-started/skills/revise-design/: SKILL.md
getting-started/skills/where-am-i/: SKILL.md
schema/: build.yaml  core.yaml  dimensions.yaml  environment.yaml  functional.yaml  inference.yaml  operate.yaml  structure.yaml  temporal.yaml  verify.yaml
tools/: build_design_graph.py  coherent_erosion_trial.py  erosion_trial.py  install.sh  loop_nudge.py  model_the_loop.py  phase_trial.py  reflow2_check.py  reflow2_cli.py  reflow2_init.py  render_views.py  skill_lint.py  smoke_mcp.py  test_init.py  test_loop_nudge.py  test_reflow2_check.py  test_render_views.py  toolsnap.py  validate_schema.py
tools/toolsnaps/: acknowledge_gap.json  add_artifact.json  add_capability.json  add_change_event.json  add_component.json  add_constraint.json  add_contributor.json  add_decision.json  add_environment.json  add_epoch.json  add_flow.json  add_interface.json  add_project.json  add_release.json  add_requirement.json  add_resource.json  add_verification.json  allocate.json  alternatives_for.json  analyze_alternatives.json  answer_question.json  apply_heal.json  apply_merge.json  authored_by.json  budget_report.json  collapse_decision.json  compare_designs.json  confirmation_ledger.json  constrains.json  consumes.json  contain_component.json  contains.json  create_edge.json  create_node.json  delete_edge.json  delete_node.json  deploy_to.json  describe_schema.json  detect_defects.json  detect_gaps.json  (+51 more)
