[package]
name = "reflow2-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reflow 2.0 deterministic core — schema-driven design graph over dynograph-foundation"

[dependencies]
dynograph-core = { workspace = true }
dynograph-storage = { workspace = true }
dynograph-graph = { workspace = true }
serde = { version = "1", features = ["derive"] }
# Snapshots store a node's property bag as a JSON string (temporal.yaml's
# `Snapshot.state`); `Value` is serde-serializable (untagged), so this renders
# clean JSON rather than an opaque debug blob.
serde_json = "1"

[features]
default = []
# On-disk persistence via the foundation's RocksDB backend. Off by default so
# the librocksdb-sys C++ compile stays opt-in; the in-memory backend needs no
# feature. When off, `DesignGraph::open_rocksdb` fails loud (foundation
# contract), rather than silently falling back to memory.
rocksdb = ["dynograph-storage/rocksdb"]
