[package]
name = "reflow2-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reflow 2.0 agent-native surface — an MCP stdio server exposing the coherence-loop ops as tools"

[[bin]]
name = "reflow2-mcp"
path = "src/main.rs"

[dependencies]
# The deterministic core, with on-disk persistence on: the design must survive
# across agent sessions (surface-plan.md, repo-file shape). This pulls the
# librocksdb-sys C++ compile — a one-time, cached cost.
reflow2-core = { path = "../reflow2-core", features = ["rocksdb", "fulltext"] }

# Official Rust MCP SDK. `server`+`macros` give the #[tool]/#[tool_router]
# surface; `transport-io` gives the stdio transport grok build / claude code
# connect over; `schemars` generates the tool-input JSON schemas.
rmcp = { version = "2", features = ["server", "macros", "transport-io", "schemars"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For iterating against the local rmcp checkout instead of crates.io, uncomment:
# [patch.crates-io]
# rmcp = { path = "/home/ajs/projects/rust-sdk/crates/rmcp" }
